--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -1,10 +1,19 @@
 * {
   margin: 0;
   padding: 0;
+  border: 1px solid red;
+}
+
+html,
+body {
+  height: 100%;
 }
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template: 80px 50px auto 50px / minmax(300px, 1fr) 4fr;
+  height: vh;
 }
 
 .container div {
@@ -15,17 +24,35 @@
   color: white;
 }
 
-.header {
+div.header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: minmax(300px, 1fr) 4fr;
+  justify-content: space-between;
+}
+
+.menu {
+  justify-self: end;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
+  display: inline-block;
+  margin: 0px min(10px, 0.5vw);
 }
 
 .sidebar {
-  background-color: #C50208;
+  background-color: #c50208;
+  grid-row: 2 / 4;
+  display: grid;
+  gap: 50px;
+}
+
+.sidebar div {
+  max-height: 150px;
 }
 
 .sidebar .photo {
@@ -36,7 +63,6 @@
   border-radius: 10px;
 }
 
-
 .sidebar .side-content {
   background-color: white;
   color: black;
@@ -45,16 +71,28 @@
 }
 
 .nav {
-  background-color: #C50208;
+  background-color: #c50208;
+  display: grid;
+  align-content: center;
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  display: inline-block;
+}
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: space-between;
+  align-items: center;
 }
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -62,12 +100,15 @@
   font-family: sans-serif;
   color: white;
   text-align: left;
+  margin-top: 4px;
 }
 
 .article .card {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: black;
   text-align: center;
+  height: 200px;
+  align-content: center;
 }
 
 .card p {
@@ -83,6 +124,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column-start: span 2;
 }
 
 .footer p {
