--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -12,7 +12,7 @@ html {
 
   display: grid;
   grid-template: 12.5% 12.5% 62.5% 12.5% / 25% 75%;
-  gap: 15px
+  gap: 15px;
 }
 
 .container div {
@@ -44,7 +44,7 @@ html {
 
 .footer {
   background-color: #393f4d;
-  grid-column: 1 / 3
+  grid-column: 1 / 3;
 }
 
 .article p {
