--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -7,13 +7,15 @@
 html,
 body {
   height: 100%;
+  margin: 0;
 }
 
 .container {
   text-align: center;
   display: grid;
   grid-template: 80px 50px auto 50px / minmax(300px, 1fr) 4fr;
-  height: vh;
+  height: 100vh;
+  gap: 4px;
 }
 
 .container div {
@@ -48,11 +50,14 @@ div.header {
   background-color: #c50208;
   grid-row: 2 / 4;
   display: grid;
-  gap: 50px;
+  align-content: space-around;
+  gap: 25px;
 }
 
 .sidebar div {
-  max-height: 150px;
+  height: clamp(70px, 12vh, 150px);
+  display: grid;
+  align-content: center;
 }
 
 .sidebar .photo {
@@ -92,6 +97,7 @@ div.header {
   background-color: #bccbde;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
   gap: 15px;
 }
 
@@ -107,7 +113,7 @@ div.header {
   background-color: #ffffff;
   color: black;
   text-align: center;
-  height: 200px;
+  max-height: 250px;
   align-content: center;
 }
 
